Project/main/default/objects/Hotel_Detail__c/Hotel_Detail__c.object-meta.xml
<CustomObject>
    <label>Hotel Detail</label>
    <nameField>
        <label>Hotel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hotel Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>