Project/main/default/objects/Hotel_Detail__c/fields/Destination__c.field-meta.xml
<CustomField>
    <fullName>Destination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destination</label>
    <referenceTo>Destination__c</referenceTo>
    <relationshipLabel>Hotel Details</relationshipLabel>
    <relationshipName>Hotel_Details</relationshipName>
    <type>Lookup</type>
</CustomField>