Project/main/default/objects/Hotel_Detail__c/fields/Hotel_Images__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Images__c</fullName>
    <label>Hotel Images</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>