Project/main/default/objects/Hotel_Detail__c/fields/Hotel_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Owner_Name__c</fullName>
    <label>Hotel Owner Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>